More examples built with Autotools and fixed header includes for Automake.

--- a/s2_thread_safe_stack_implementation/Makefile.am
+++ b/s2_thread_safe_stack_implementation/Makefile.am
@@ -2,3 +2,5 @@ bin_PROGRAMS = threadsafestack
 
 threadsafestack_CXXFLAGS = -std=c++17
 threadsafestack_SOURCES = src/main.cc
+
+AM_CPPFLAGS = -Iinc
